# tree-sitter-bg3

./: .gitignore  CMakeLists.txt  Cargo.toml  Makefile  Package.swift  binding.gyp  go.mod  grammar.js  package.json  pyproject.toml  setup.py  tree-sitter.json
bindings/rust/: build.rs  lib.rs
src/: grammar.json  parser.c
